Missing space fixed

--- a/public/style.css
+++ b/public/style.css
@@ -146,6 +146,7 @@ main p {
 #projects {
   background-color: white;
   height: 75vh;
+  width: 100vw;
   padding: 5px;
   display: flex;
   flex-direction: column;
